--- a/project2/pyproject.toml
+++ b/project2/pyproject.toml
@@ -7,6 +7,7 @@ name = "android-package-analyzer"
 version = "1.0.0"
 dependencies = [
     "android-analyzer-common",
+    "requests",
     "pure-python-adb",
 ]
 requires-python = ">= 3.6"
